# mindAgents

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
simulation_results/: simulation_p1_h1_played0_r10_claude35_haiku.csv  simulation_p1_h1_played0_r10_claude35_sonnet.csv  simulation_p1_h1_played0_r10_claude3_haiku.csv  simulation_p1_h1_played0_r10_claude3_opus.csv  simulation_p1_h1_played0_r10_claude3_sonnet.csv  simulation_p1_h1_played0_r10_gemini_1_5_flash.csv  simulation_p1_h1_played0_r10_gemini_2_0_flash.csv  simulation_p1_h1_played0_r10_gemini_pro.csv  simulation_p1_h1_played0_r10_gpt35.csv  simulation_p1_h1_played0_r10_gpt35_turbo.csv  simulation_p1_h1_played0_r10_gpt4.csv  simulation_p1_h1_played0_r10_gpt4_turbo.csv  simulation_p1_h1_played0_r1_claude35_sonnet.csv  simulation_p1_h1_played0_r1_gpt4.csv  simulation_p1_h1_played0_r20_claude35_sonnet.csv  simulation_p1_h1_played0_r5_gpt4.csv  simulation_p1_h1_played11_r10_claude35_sonnet.csv  simulation_p1_h1_played11_r10_gemini_2_0_flash.csv  simulation_p1_h1_played11_r10_gpt35_turbo.csv  simulation_p1_h1_played11_r10_gpt4.csv  simulation_p1_h1_played11_r10_gpt4_turbo.csv  simulation_p1_h1_played1_r10_claude35_sonnet.csv  simulation_p1_h1_played1_r10_gemini_2_0_flash.csv  simulation_p1_h1_played1_r10_gpt35_turbo.csv  simulation_p1_h1_played1_r10_gpt4.csv  simulation_p1_h1_played1_r10_gpt4_turbo.csv  simulation_p1_h1_played21_r10_claude35_sonnet.csv  simulation_p1_h1_played21_r10_gemini_2_0_flash.csv  simulation_p1_h1_played21_r10_gpt35_turbo.csv  simulation_p1_h1_played21_r10_gpt4.csv  (+33 more)
(+37 files in other folders)
