[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mind_agents"
version = "0.1.0"
description = "A project for simulating and interacting with LLMs"
requires-python = ">=3.10"
authors = [
    {name = "Bryan Bischof"}
]
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "httpx>=0.24.0",
]

[project.scripts]
mind_agents = "mind_agents.play:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "ruff>=0.1.9",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
line-length = 120
target-version = 'py39'
select = ["E", "F", "I", "N", "W", "B", "UP"]
